More data about heroes

--- a/_layouts/heroes.html
+++ b/_layouts/heroes.html
@@ -3,7 +3,10 @@ layout: default
 ---
 
 <p>Name: {{ page.name }}</p>
+<p>JP Name: {{ page.jp_name }}</p>
 <p>Race: {{ page.race }}</p>
+<p>Occupation: {{ page.occupation }}</p>
+<p>Voice actor: {{ page.voice_actor }}</p>
 <p>HP: {{ page.HP }}</p>
 <p>ATK: {{ page.ATK }}</p>
 
