--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 {% include header.html %}
 {% include banner.html %}
-<aside><a href="{{ site.github.edit }}{{ page.path }}">Edit this page</a></aside>
+<aside><a href="{{ site.github.repository_url }}/edit/master{{ page.path }}">Edit this page</a></aside>
 <main class="container">
 {{ content }}
 </main>
