--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
     <nav class="site-nav">
       <a href="/">Home</a>
       <a href="/heroes/">Heroes</a>
+      <a href="/contributing/">Contributing</a>
     </nav>
   </div>
 </header>
