Add gameplay page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,7 @@
     <a class="site-title" href="/"><b>Live A Hero</b></a> Wiki
     <nav class="site-nav">
       <a href="/">Home</a>
+      <a href="/gameplay/">Gameplay</a>
       <a href="/heroes/">Heroes</a>
       <a href="/contributing/">Contributing</a>
     </nav>
