Make edit page bar less ugly

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -66,6 +66,11 @@ nav a {
 .page-header a {
   color: $color500;
 }
+aside {
+  background: #fff;
+  padding: 20px;
+  box-shadow: 0 4px 2px #d5d5d5;
+}
 main {
   flex: 1 0 auto;
   padding-top: 40px;
