--- a/_layouts/heroes.html
+++ b/_layouts/heroes.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include hero-infobox.html name=page.name jp_name=page.jp_name race=page.race illustrator=page.illustrator voice_actor=page.voice_actor %}
+
 <p>Name: {{ page.name }}</p>
 <p>JP Name: {{ page.jp_name }}</p>
 <p>Race: {{ page.race }}</p>
