Implement hero sprite select

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
     Powered by <a href="http://jekyllrb.com/">Jekyll</a>
   </nav>
 </footer>
-
+<script async src="/assets/main.js"></script>
 </body>
 </html>
