--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,17 @@
 layout: compress
 ---
 {% include header.html %}
-{% include banner.html %}
-<aside><a href="{{ site.github.repository_url }}/edit/master/{{ page.path }}">Edit this page</a></aside>
-<main class="container">
-{{ content }}
+<main class="content__area">
+<div class="content">
+    <aside>    
+    <button class="menu-button">
+        <span aria-hidden="true"><svg height="16" viewBox="0 0 12 16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="m11.41 9h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm0-4h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm-10.82 6h10.81c.59 0 .59.41.59 1s0 1-.59 1h-10.81c-.59 0-.59-.41-.59-1s0-1 .59-1z"/></svg></span>
+        <span>Menu</span>
+    </button>
+    <a class="github-button" href="{{ site.github.repository_url }}/edit/master/{{ page.path }}">Edit this page</a>
+    </aside>
+    {% include banner.html %}
+    {{ content }}
+</div>
 </main>
 {% include footer.html %}
