--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer>
-  <nav class="container">
+<footer class="content__area">
+  <nav class="content">
     Powered by <a href="http://jekyllrb.com/">Jekyll</a>
   </nav>
 </footer>
