Update css for details/summary

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -181,10 +181,16 @@ li {
   line-height: 1.5;
 }
 details {
-  border-top: 1px solid #aaa;
+  border: 1px solid #aaa;
+  padding: 10px;
 }
 summary {
-  padding: 10px;
+  margin-bottom: 10px;
+}
+.footnotes {
+  border-top: 1px dotted;
+  margin-top: 40px;
+  padding-top: 20px;
 }
 #markdown-toc, #timeline {
   list-style: none;
