--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,7 +26,7 @@ header {
   background-color: $colorPrimary;
   padding: 18px 0;
 }
-.container:before, .container:after {
+.clearfix:before, .clearfix:after {
   content: '';
   clear: both;
   display: table;
@@ -258,17 +258,7 @@ footer a {
   color: #fff;
   text-decoration: underline;
 }
-/*@media (min-width: 820px) {
-  .container {
-    width: 760px;
-    margin: auto;
-  }
-}*/
 @media (max-width: 820px) {
-  .container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
   header {
     text-align: center;
   }
