Fix bug in limit skill

--- a/_includes/hero-infobox2.html
+++ b/_includes/hero-infobox2.html
@@ -72,7 +72,7 @@
     {% capture sid %}{{ id }}{% endcapture %}
     {% assign skill = site.data.SkillMaster[sid] %}
     <tr data-skill_id="{{ sid }}">
-        <td>{{ skill.skillName }}</td><td alt="{{ skill.description }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
+        <td>{{ skill.skillName }}</td><td title="{{ skill.description }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
     </tr>
     {% endfor %}
 </table>
