Change hero infobox design

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -304,3 +304,43 @@ figcaption {
       padding: 0 159px;
   }
 }
+.heroinfobox {
+  padding: 2px;
+}
+.heroinfobox .header {
+  padding: 5px;
+}
+.heroinfobox table {
+  margin: 0;
+}
+// TODO: fix color for other elements
+.element1 th, .element1 .header {
+  background: #f07d75;
+}
+.element1 .heroinfobox {
+  border: 1px solid #f07d75;
+}
+.element2 th, .element2 .header {
+  background: #f07d75;
+}
+.element2 .heroinfobox {
+  border: 1px solid #f07d75;
+}
+.element3 th, .element3 .header {
+  background: #f07d75;
+}
+.element3 .heroinfobox {
+  border: 1px solid #f07d75;
+}
+.element4 th, .element4 .header {
+  background: #f07d75;
+}
+.element4 .heroinfobox {
+  border: 1px solid #f07d75;
+}
+.element5 th, .element5 .header {
+  background: #f07d75;
+}
+.element5 .heroinfobox {
+  border: 1px solid #f07d75;
+}
