--- a/_includes/hero-infobox2.html
+++ b/_includes/hero-infobox2.html
@@ -5,32 +5,36 @@
 {% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}"{% endcapture %}
 {% assign artworks = site.static_files | where: "hero_sprites", true | where_exp: "item", artwork_cond | map: "path" %}
 
-<div class="element{{ firstCardInfo.element }}">
-    <div class="header">
-        <td class="caption">
+<div class=" element{{ firstCardInfo.element }}">
+    <div class="heroinfobox">
+        <div class="header">
             <div class="name">{{ firstCardInfo.name }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
-        </td>
-    </div>
-    {% include hero-infobox-gallery.html artworks=artworks %}
-    <div class="body">
+        </div>
+        {% include hero-infobox-gallery.html artworks=artworks %}
         <table>
             <tbody>
                 <tr>
-                    <th>Illustration</th>
-                    <td>{{ firstCardInfo.illustrator }}</td>
+                    <th>Attribute</th>
+                    <td>{% include hero-element.html element=firstCardInfo.element %}</td>
+                    <th>Role</th>
+                    <td>{% include hero-role.html role=firstCardInfo.role %}</td>
                 </tr>
                 <tr>
-                    <th>Voice</th>
-                    <td>{{ firstCardInfo.characterVoice }}</td>
+                    <th colspan="2">Illustration</th>
+                    <td colspan="2">{{ firstCardInfo.illustrator }}</td>
                 </tr>
                 <tr>
-                    <th>Occupation</th>
-                    <td>{{ firstCardInfo.job }}</td>
+                    <th colspan="2">Voice</th>
+                    <td colspan="2">{{ firstCardInfo.characterVoice }}</td>
                 </tr>
                 <tr>
-                    <th>Affliation office</th>
-                    <td>{{ firstCardInfo.affiliationOffice }}</td>
+                    <th colspan="2">Occupation</th>
+                    <td colspan="2">{{ firstCardInfo.job }}</td>
+                </tr>
+                <tr>
+                    <th colspan="2">Affliation office</th>
+                    <td colspan="2">{{ firstCardInfo.affiliationOffice }}</td>
                 </tr>
             </tbody>
         </table>
@@ -46,7 +50,7 @@
 {% endfor %}
 <h2>Stats</h2>
 {% for cardInfo in cardInfos %}
-<div class="hero{{ cardInfo.rarity }} element{{ cardInfo.element }}">
+<div class="hero{{ cardInfo.rarity }}">
     <h3>{{ cardInfo.rarity }} ☆</h3>
     <table>
         <tr>
@@ -60,7 +64,6 @@
     </table>
 </div>
 {% endfor %}
-</div>
 
 <h2>Skills</h2>
 
@@ -76,3 +79,4 @@
     </tr>
     {% endfor %}
 </table>
+</div>
