--- a/_includes/hero-infobox2.html
+++ b/_includes/hero-infobox2.html
@@ -8,7 +8,7 @@
 <div class=" element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ firstCardInfo.name }}</div>
+            <div class="name">{{ page.name }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
         {% include hero-infobox-gallery.html artworks=artworks %}
