--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -79,7 +79,7 @@ Gain {{ effect.parameter.value }}% extra gold
 {% when "IncreaseExp" %}
 Gain {{ effect.parameter.value }}% extra XP
 {% when "Aggregation" %}
-Aggregate damage (?)
+Apply Damage Aggregation status to self
 {% else %}
 Unknown effect class ({{ effect.class }})
 {% endcase %}
