Update attribute color style

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -313,7 +313,6 @@ figcaption {
 .heroinfobox table {
   margin: 0;
 }
-// TODO: fix color for other elements
 .element1 th, .element1 .header {
   background: #f07d75;
 }
@@ -321,26 +320,26 @@ figcaption {
   border: 1px solid #f07d75;
 }
 .element2 th, .element2 .header {
-  background: #f07d75;
+  background: #4e8ddf;
 }
 .element2 .heroinfobox {
-  border: 1px solid #f07d75;
+  border: 1px solid #4e8ddf;
 }
 .element3 th, .element3 .header {
-  background: #f07d75;
+  background: #5fcb58;
 }
 .element3 .heroinfobox {
-  border: 1px solid #f07d75;
+  border: 1px solid #5fcb58;
 }
 .element4 th, .element4 .header {
-  background: #f07d75;
+  background: #ffb251;
 }
 .element4 .heroinfobox {
-  border: 1px solid #f07d75;
+  border: 1px solid #ffb251;
 }
 .element5 th, .element5 .header {
-  background: #f07d75;
+  background: #9c76db;
 }
 .element5 .heroinfobox {
-  border: 1px solid #f07d75;
+  border: 1px solid #9c76db;
 }
