Skill effect parsing (#9)
Call stack (`sidekick-infobox` is similar too)

- hero-infobox2
  - hero-infobox-gallery
  - hero-role
  - hero-element
  - skill-table
    - skill-description
      - skill-timing
      - skill-effect-description
        - skill-effect-target

Skill effect trigger is implemented in `main.js` because Jekyll/Liquid template cannot parse string into object.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -304,3 +304,42 @@ figcaption {
       padding: 0 159px;
   }
 }
+.heroinfobox {
+  padding: 2px;
+}
+.heroinfobox .header {
+  padding: 5px;
+}
+.heroinfobox table {
+  margin: 0;
+}
+.element1 th, .element1 .header {
+  background: #f07d75;
+}
+.element1 .heroinfobox {
+  border: 1px solid #f07d75;
+}
+.element2 th, .element2 .header {
+  background: #4e8ddf;
+}
+.element2 .heroinfobox {
+  border: 1px solid #4e8ddf;
+}
+.element3 th, .element3 .header {
+  background: #5fcb58;
+}
+.element3 .heroinfobox {
+  border: 1px solid #5fcb58;
+}
+.element4 th, .element4 .header {
+  background: #ffb251;
+}
+.element4 .heroinfobox {
+  border: 1px solid #ffb251;
+}
+.element5 th, .element5 .header {
+  background: #9c76db;
+}
+.element5 .heroinfobox {
+  border: 1px solid #9c76db;
+}
