--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -1,5 +1,5 @@
 <p>Disclaimer: skill effect parsing is still work in progress. The generated English description might
-contains some misinformation. Hover over the effect description to see original japanese description.
+contain some misinformation. Hover over the effect description to see original japanese description.
 </p>
 
 <p>Please help report any bug related to skill effect <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/7">here</a>.</p>
