--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -1,8 +1,10 @@
+{% unless include.no_disclaimer %}
 <p>Disclaimer: skill effect parsing is still work in progress. The generated English description might
 contain some misinformation. Hover over the effect description to see original japanese description.
 </p>
 
 <p>Please help report any bug related to skill effect <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/7">here</a>.</p>
+{% endunless %}
 
 <table>
     <tr>
