--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -6,7 +6,7 @@
 
 {% if skillEffectJson.trigger %}(<span class="skill-trigger" data-trigger="{{ skillEffectJson.trigger | escape }}"></span>){% endif %}
 {% for effect in skillEffectJson.effects %}
-{% assign turnDefinition = turn %}
+{% assign turnDefinition = "turn" %}
 {% case effect.class %}
 {% when "Damage" %}
 Deal {{ effect.parameter.value }}% of damage to {{ target }}
@@ -19,7 +19,7 @@ Base View {% if effect.parameter.value >= 100 %}Up{% else %}Down{% endif %} by {
 {% when "ChangeView" %}
 Add {{ effect.parameter.value }} views
 {% when "MultipleDefence" %}
-{% assign turnDefinition = next attack %}
+{% assign turnDefinition = "next attack" %}
 DEF {% if effect.parameter.value >= 100 %}Up{% else %}Down{% endif %} by {{ effect.parameter.value | divided_by: 100.0 }}x to {{ target }}
 {% when "ChangeAgi" %}
 SPD {% if effect.parameter.value >= 0 %}Up{% else %}Down{% endif %} by {{ effect.parameter.value }} to {{ target }}
